--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "morgan": "~1.9.0",
     "mysql": "^2.16.0",
     "nodemon": "^1.18.9",
-    "xml": "^1.0.1"
+    "xml": "^1.0.1",
+    "xml-formatter": "^1.0.1"
   }
 }
